fix(chat): stretch scroll buttons

--- a/packages/default/scss/chat/_layout.scss
+++ b/packages/default/scss/chat/_layout.scss
@@ -450,6 +450,7 @@
 
 
         .k-scroll-button {
+            height: 100%;
             position: absolute;
             z-index: 2;
             top: 50%;
